modify pom.xml, README

--- a/pom.xml
+++ b/pom.xml
@@ -1,17 +1,23 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
+
     <groupId>com.github.kamegu</groupId>
     <artifactId>jersey-mvc-freemarker-extension</artifactId>
     <version>0.0.1</version>
     <packaging>pom</packaging>
-    <modules>
-    </modules>
+    <name>jersey-mvc-freemarker-extension</name>
+    <description>
+        This is extension for jersey-mvc-freemarker
+    </description>
+    <url>https://github.com/kamegu/jersey-mvc-freemarker-extension</url>
+
     <properties>
         <maven.compiler.source>1.6</maven.compiler.source>
         <maven.compiler.target>1.6</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <freemarker.version>2.3.20</freemarker.version>    
+        <freemarker.version>2.3.20</freemarker.version>
+        <internal.repo.directory>D:\dev\mvn-repo</internal.repo.directory>
     </properties>
     <licenses>
         <license>
@@ -28,6 +34,13 @@
         </dependency>
     </dependencies>
 
+    <distributionManagement>
+        <repository>
+            <id>internal.repo</id>
+            <name>Temporary Staging Repository</name>
+            <url>file://${internal.repo.directory}</url>
+        </repository>
+    </distributionManagement>    
     <build>
         <plugins>
             <plugin>
