--- a/jersey-mvc-freemarker-ext-common/pom.xml
+++ b/jersey-mvc-freemarker-ext-common/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>com.github.kamegu</groupId>
         <artifactId>jersey-mvc-freemarker-extension</artifactId>
-        <version>0.0.1</version>
+        <version>0.0.2-SNAPSHOT</version>
     </parent>
     <artifactId>jersey-mvc-freemarker-ext-common</artifactId>
     <packaging>jar</packaging>
